# zuzu

./: Cargo.toml  README.md
.github/workflows/: codeql.yml
src/: config.rs  lib.rs  main.rs
src/api/: error.rs  mod.rs  response.rs
src/api/dto/: responses.rs
src/api/dto/requests/: auth.rs
src/api/handlers/: auth_handlers.rs  user_handlers.rs
src/api/middlewares/: context.rs  mod.rs
src/api/routes/: mod.rs  user_routes.rs
src/config/: database.rs  error_handling.rs
src/domain/: mod.rs  repository.rs
src/domain/models/: authentication.rs  user.rs
src/domain/repositories/: user_repository.rs
src/domain/services/: authentication.rs  mod.rs  user_services.rs
src/handlers/: user_handler.rs
src/infrastructure/database/schemas/: schemas.rs
src/models/: user.rs
src/routes/: user_routes.rs
src/schemas/: mod.rs  schemas.rs
src/services/: user.rs
src/utils/: context.rs  crypto.rs  errors.rs  mod.rs  response.rs
