[package]
name = "api_with_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web= { version = "4.0.0-beta.8", features = ["default"] }
uuid = { version = "1.11.0", features = ["serde","v4"]}
diesel = {version = "2.2.6", features = ["postgres_backend", "postgres", "r2d2", "uuid", "serde_json", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8"
serde_json = "1.0.133"
chrono = { version = "0.4.39" , features = ["serde"] }
diesel-derive-enum= { version = "2.1.0", features = ["postgres"] }
thiserror = "2.0.9"
env_logger = "0.11.6"
pasetors = { version = "0.7.1"}
base64 = "0.22.1"
once_cell = "1.20.2"
argon2 = "0.5.3"